// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`horizontal > matches snapshot 1`] = `
<div>
  <div
    class="bg-pca-grey-300/50 dark:bg-pca-grey-800 shrink-0 h-px w-full"
    data-orientation="horizontal"
    role="separator"
  />
</div>
`;

exports[`vertical > matches snapshot 1`] = `
<div>
  <div
    aria-orientation="vertical"
    class="bg-pca-grey-300/50 dark:bg-pca-grey-800 shrink-0 w-px h-full"
    data-orientation="vertical"
    role="separator"
  />
</div>
`;
